# agentic-orchestrator

./: .env.example  README.md  docker-compose.yml  pyproject.toml
config/docker/otel/: otel-collector-config.yaml
config/docker/slim/: Dockerfile  Jenkinsfile  server-config.yaml  slim.yaml  task-definition.json
config/docker/slim-ec2/: README.md  deploy.sh  docker-compose.yml  slim-transporter.service  slim.yaml
config/slim/: slim.yaml
docker/: Dockerfile.supervisor  Dockerfile.worker
docs/: carrier_agent_api.md  frontend_animation_system.md  frontend_architecture_guide.md  multi_agent_architecture_guide.md  project_documentation.md  reference_project_architecture.md  reference_project_class_diagram.md  reference_project_frontend.md  serviceability_agent_api.md  supervisor_agent_api.md
src/frontend/: .env.example  Dockerfile  Jenkinsfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/contexts/: ThemeContext.tsx
src/frontend/src/hooks/: useAgentAPI.ts
src/frontend/src/stores/: chatHistoryStore.ts  orchestratorStreamingStore.ts
src/frontend/src/types/: index.ts  message.ts  streaming.ts
src/frontend/src/utils/: const.ts  db.ts  graphConfigs.tsx
src/orchestrator/: __init__.py
src/orchestrator/agents/: __init__.py
src/orchestrator/agents/supervisor/: __init__.py  card.py  graph.py  hitl.py  main.py  tools.py
src/orchestrator/agents/workers/: __init__.py
src/orchestrator/booking_agent/: Dockerfile  Jenkinsfile  README.md  __init__.py  pyproject.toml
src/orchestrator/booking_agent/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/orchestrator/booking_agent/app/: __init__.py  container.py  main.py  server_wrapper.py
src/orchestrator/booking_agent/app/routers/: __init__.py  agent.py  health.py  orders.py
src/orchestrator/booking_agent/config/: __init__.py  settings.py
src/orchestrator/booking_agent/domain/: card.py  exceptions.py  interfaces.py  models.py
src/orchestrator/booking_agent/services/: __init__.py
src/orchestrator/booking_agent/services/order/: __init__.py  client.py  tool.py
src/orchestrator/carrier_agent/: Dockerfile  README.md  pyproject.toml
src/orchestrator/carrier_agent/agent/: graph.py  nodes.py  state.py  tools.py
src/orchestrator/carrier_agent/app/: container.py  main.py  server_wrapper.py
src/orchestrator/carrier_agent/app/routers/: agent.py  health.py  serviceability.py
src/orchestrator/carrier_agent/config/: settings.py
src/orchestrator/carrier_agent/domain/: card.py  exceptions.py  interfaces.py
src/orchestrator/carrier_agent/services/serviceability/: client.py  tool.py
src/orchestrator/carrier_service/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/orchestrator/carrier_service/app/: container.py  main.py
src/orchestrator/carrier_service/config/: __init__.py  settings.py
src/orchestrator/carrier_service/domain/: interfaces.py  models.py
src/orchestrator/carrier_service/infra/: factory.py
src/orchestrator/carrier_service/services/: __init__.py  carrier_orchestrator.py  carrier_selector.py
src/orchestrator/common/: __init__.py  config.py  factory.py  llm.py
src/orchestrator/interfaces/: __init__.py  llm_provider.py
src/orchestrator/models/: __init__.py  order.py
src/orchestrator/providers/: __init__.py  litellm_adapter.py
src/orchestrator/serviceability_agent/: Dockerfile  Jenkinsfile  README.md  __init__.py  pyproject.toml
src/orchestrator/serviceability_agent/agent/: graph.py  nodes.py  state.py  tools.py
src/orchestrator/serviceability_agent/app/: __init__.py  container.py  (+2 more)
src/orchestrator/services/: __init__.py
src/orchestrator/supervisor_agent/: Dockerfile  Jenkinsfile  debug_db.py  pyproject.toml
src/orchestrator/supervisor_agent/agent/: graph.py  llm_factory.py  memory.py  nodes.py  shared.py  state.py  tools.py
src/orchestrator/supervisor_agent/app/: auth.py  booking_client.py  client.py  main.py
src/orchestrator/supervisor_agent/app/routers/: settings.py
src/orchestrator/supervisor_agent/app/services/: encryption.py  llm_config_service.py
(+76 files in other folders)
